# visionphonic

./: .gitignore  .gitmodules  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  README.md  compile_commands.json
cmake/: libs.cmake  options.cmake
lib/SFML/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  SFMLConfigDependencies.cmake  cmake_install.cmake
lib/SFML/src/SFML/: Makefile  cmake_install.cmake
lib/SFML/src/SFML/Audio/: Makefile  cmake_install.cmake
lib/SFML/src/SFML/Graphics/: Makefile  cmake_install.cmake
lib/SFML/src/SFML/Network/: Makefile  cmake_install.cmake
lib/SFML/src/SFML/System/: Makefile  cmake_install.cmake
lib/SFML/src/SFML/Window/: Makefile  cmake_install.cmake
src/VisionPhonic/: main.cpp
src/VisionPhonic/Analysis/: CMakeLists.txt
tests/: CMakeLists.txt  test1.cpp  test_sfml_audio.cpp
